2015-07-16  Barton E. Schaefer  <schaefer@zsh.org>

	* 35805: Test/E01options.ztst: tests for 35799

2015-07-15  Barton E. Schaefer  <schaefer@zsh.org>

	* 35799: Src/params.c: with NO_EXEC, parse parameter subscript
	expressions to correctly balance enclosing braces, but do not
	perform the subscripting

2015-07-15  Mikael Magnusson  <mikachu@gmail.com>

	* unposted: Completion/Zsh/Type/_ps1234: unposted: _ps1234:
	Fix ternary test char completion

2015-07-14  Oliver Kiddle  <opk@zsh.org>

	* 35789: (tweaked c.f. Bart: 35791) Completion/Unix/Type/_files:
	duplicate glob qualifier handling from _path_files so it is
	called once and not for each file pattern

2015-07-13  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 35790: Util/zyodl.vim: zyodl.vim: Be compatible with Vim 6.

	* 35775: Doc/Zsh/.vimrc Etc/zsh-development-guide Util/zyodl.vim:
	New zsh-specific yodl vim syntax highlighting.

2015-07-13  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 35769: Functions/Zle/edit-command-line: edit-command-line:
	Go to the right byte offset

2015-07-13  Oliver Kiddle  <opk@zsh.org>

	* 35737: (tweaked c.f. Peter: 35759): Src/Zle/zle_utils.c,
	Functions/Zle/read-from-minibuffer: use new undo limit for
	minibuffer and beep when limit is reached

	* 35756: Completion/Zsh/Type/_ps1234: use the actual
	colours in the completion list for terminal colours

	* 35774: Completion/Unix/Type/_dates: fix double
	formatting of date explanation message

2015-07-13  Daniel Hahler  <zsh@thequod.de>

	* 35779: Completion/Unix/Command/_git: _git-config: remove
	extraneous "local expl".

2015-07-12  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Test/B01cd.ztst: Typo

2015-07-10  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: Test/B01cd.ztst: notes on ZTST_unimplemented: and
	ZTST_skip.

2015-07-10  Mikael Magnusson  <mikachu@gmail.com>

	* 35761: Test/V09datetime.ztst: Make sure to skip alternate
	format extension test properly
