@@ -1,3 +1,10 @@
+2015-07-22  Barton E. Schaefer  <schaefer@zsh.org>
+
+	* 35582: Test/A06assign.ztst, Test/B02typeset.ztst: test for 35581
+
+	* 35581: Src/params.c: output array assignments with spaces inside
+	the parens
+
 2015-07-16  Barton E. Schaefer  <schaefer@zsh.org>
 
 	* 35805: Test/E01options.ztst: tests for 35799
